--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1594,7 +1594,7 @@ comments</property>
 	<widget class="GtkCheckButton" id="checkbutton_height_preferred">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
-	  <property name="label" translatable="yes">Prefer height over TV</property>
+	  <property name="label" translatable="yes">Prefer height over TF</property>
 	  <property name="use_underline">True</property>
 	  <property name="relief">GTK_RELIEF_NORMAL</property>
 	  <property name="focus_on_click">True</property>
@@ -1632,7 +1632,7 @@ comments</property>
 	<widget class="GtkCheckButton" id="checkbutton_show_tv_tc_index">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
-	  <property name="label" translatable="yes">Show indexes between TV and TC</property>
+	  <property name="label" translatable="yes">Show indexes between TF and TC</property>
 	  <property name="use_underline">True</property>
 	  <property name="relief">GTK_RELIEF_NORMAL</property>
 	  <property name="focus_on_click">True</property>
@@ -10191,7 +10191,7 @@ If you need more, just repeat the operation later.</property>
 	    <widget class="GtkCheckButton" id="checkbutton_show_tv_tc">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">show TV/TC</property>
+	      <property name="label" translatable="yes">show TF/TC</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
@@ -11032,7 +11032,7 @@ If you need more, just repeat the operation later.</property>
 		  <child>
 		    <widget class="GtkMenuItem" id="execute_repetitive_jumps1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Execute repetitive jump</property>
+		      <property name="label" translatable="yes">Execute reactive jump</property>
 		      <property name="use_underline">True</property>
 
 		      <child>
@@ -11069,7 +11069,7 @@ If you need more, just repeat the operation later.</property>
 			  <child>
 			    <widget class="GtkImageMenuItem" id="more_rj">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">More repetitive jumps</property>
+			      <property name="label" translatable="yes">More reactive jumps</property>
 			      <property name="use_underline">True</property>
 			      <signal name="activate" handler="on_button_more_rj_clicked" last_modification_time="Fri, 11 Mar 2005 14:45:23 GMT"/>
 
@@ -12454,7 +12454,7 @@ If you need more, just repeat the operation later.</property>
 				  <child>
 				    <widget class="GtkButton" id="button_rj_more">
 				      <property name="visible">True</property>
-				      <property name="tooltip" translatable="yes">More repetitive jumps</property>
+				      <property name="tooltip" translatable="yes">More reactive jumps</property>
 				      <property name="can_focus">True</property>
 				      <property name="label" translatable="yes">more</property>
 				      <property name="use_underline">True</property>
@@ -15696,12 +15696,12 @@ Event&lt;/b&gt;</property>
 			  </child>
 
 			  <child>
-			    <widget class="GtkLabel" id="label_tv_now">
+			    <widget class="GtkLabel" id="label_tc_now">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes"></property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="justify">GTK_JUSTIFY_CENTER</property>
 			      <property name="wrap">False</property>
 			      <property name="selectable">False</property>
 			      <property name="xalign">0</property>
@@ -15724,12 +15724,12 @@ Event&lt;/b&gt;</property>
 			  </child>
 
 			  <child>
-			    <widget class="GtkLabel" id="label_tv_person">
+			    <widget class="GtkLabel" id="label_tc_person">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes"></property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="justify">GTK_JUSTIFY_CENTER</property>
 			      <property name="wrap">False</property>
 			      <property name="selectable">False</property>
 			      <property name="xalign">0</property>
@@ -15744,6 +15744,34 @@ Event&lt;/b&gt;</property>
 			    <packing>
 			      <property name="left_attach">1</property>
 			      <property name="right_attach">2</property>
+			      <property name="top_attach">1</property>
+			      <property name="bottom_attach">2</property>
+			      <property name="x_options"></property>
+			      <property name="y_options"></property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkLabel" id="label_tc_session">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes"></property>
+			      <property name="use_underline">False</property>
+			      <property name="use_markup">False</property>
+			      <property name="justify">GTK_JUSTIFY_CENTER</property>
+			      <property name="wrap">False</property>
+			      <property name="selectable">False</property>
+			      <property name="xalign">0</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			      <property name="width_chars">-1</property>
+			      <property name="single_line_mode">False</property>
+			      <property name="angle">0</property>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">2</property>
+			      <property name="right_attach">3</property>
 			      <property name="top_attach">1</property>
 			      <property name="bottom_attach">2</property>
 			      <property name="x_options"></property>
@@ -15757,7 +15785,7 @@ Event&lt;/b&gt;</property>
 			      <property name="label" translatable="yes"></property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="justify">GTK_JUSTIFY_CENTER</property>
 			      <property name="wrap">False</property>
 			      <property name="selectable">False</property>
 			      <property name="xalign">0</property>
@@ -15772,34 +15800,6 @@ Event&lt;/b&gt;</property>
 			    <packing>
 			      <property name="left_attach">2</property>
 			      <property name="right_attach">3</property>
-			      <property name="top_attach">1</property>
-			      <property name="bottom_attach">2</property>
-			      <property name="x_options"></property>
-			      <property name="y_options"></property>
-			    </packing>
-			  </child>
-
-			  <child>
-			    <widget class="GtkLabel" id="label_tc_now">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes"></property>
-			      <property name="use_underline">False</property>
-			      <property name="use_markup">False</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
-			      <property name="wrap">False</property>
-			      <property name="selectable">False</property>
-			      <property name="xalign">0</property>
-			      <property name="yalign">0.5</property>
-			      <property name="xpad">0</property>
-			      <property name="ypad">0</property>
-			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-			      <property name="width_chars">-1</property>
-			      <property name="single_line_mode">False</property>
-			      <property name="angle">0</property>
-			    </widget>
-			    <packing>
-			      <property name="left_attach">0</property>
-			      <property name="right_attach">1</property>
 			      <property name="top_attach">2</property>
 			      <property name="bottom_attach">3</property>
 			      <property name="x_options"></property>
@@ -15808,12 +15808,12 @@ Event&lt;/b&gt;</property>
 			  </child>
 
 			  <child>
-			    <widget class="GtkLabel" id="label_tc_person">
+			    <widget class="GtkLabel" id="label_tv_person">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes"></property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="justify">GTK_JUSTIFY_CENTER</property>
 			      <property name="wrap">False</property>
 			      <property name="selectable">False</property>
 			      <property name="xalign">0</property>
@@ -15836,12 +15836,12 @@ Event&lt;/b&gt;</property>
 			  </child>
 
 			  <child>
-			    <widget class="GtkLabel" id="label_tc_session">
+			    <widget class="GtkLabel" id="label_tv_now">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes"></property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="justify">GTK_JUSTIFY_CENTER</property>
 			      <property name="wrap">False</property>
 			      <property name="selectable">False</property>
 			      <property name="xalign">0</property>
@@ -15854,8 +15854,8 @@ Event&lt;/b&gt;</property>
 			      <property name="angle">0</property>
 			    </widget>
 			    <packing>
-			      <property name="left_attach">2</property>
-			      <property name="right_attach">3</property>
+			      <property name="left_attach">0</property>
+			      <property name="right_attach">1</property>
 			      <property name="top_attach">2</property>
 			      <property name="bottom_attach">3</property>
 			      <property name="x_options"></property>
@@ -15905,7 +15905,7 @@ Event&lt;/b&gt;</property>
 			  <child>
 			    <widget class="GtkLabel" id="label255">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">TV</property>
+			      <property name="label" translatable="yes">TC</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -15930,7 +15930,7 @@ Event&lt;/b&gt;</property>
 			  <child>
 			    <widget class="GtkLabel" id="label256">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">TC</property>
+			      <property name="label" translatable="yes">TF</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
